SDKs/twilio.com/twilio_pricing_v1/1.37.4/java/USAGE.md
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            FetchMessagingCountryRequest req = new FetchMessagingCountryRequest() {{
                security = new FetchMessagingCountrySecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                pathParams = new FetchMessagingCountryPathParams() {{
                    isoCountry = "dolores";
                }};
            }};

            FetchMessagingCountryResponse res = sdk.fetchMessagingCountry(req);

            if (res.pricingV1MessagingMessagingCountryInstance.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->